@@ -57,6 +57,12 @@
       <li>Rob Christensen
     </ul>
 
+  <li>Debian
+    <ul>
+      <li>Fathi Boudra
+      <li>Mike Hommey
+    </ul>
+
   <li>Garmin
     <ul>
       <li>Haitao Huang
