@@ -1,3 +1,11 @@
+2010-02-26  Sam Weinig  <sam@webkit.org>
+
+        Rubber-stamped by Adele Peterson.
+
+        Update Security Group Members list.
+
+        * security/security-group-members.html:
+
 2010-02-23  Jessie Berlin  <jberlin@webkit.org>
 
         Reviewed by Eric Seidel and Adam Roben.
